# flyvis_tutorial

./: .gitignore  00_flyvis_tutorial_using_the_model.ipynb  01_flyvis_tutorial_mechanism_discovery.ipynb  02_flyvis_tutorial_deep_stimulus_design.ipynb  README.md  pyproject.toml  test.ipynb
flyvis_tutorial/: __init__.py  utils.py
tutorials/: 00_flyvis_tutorial_using_the_model.ipynb  01_flyvis_tutorial_mechanism_discovery.ipynb  02_flyvis_tutorial_deep_stimulus_design.ipynb
